lib/src/complete/snapshots/usage__complete__bash__tests__complete_bash-3.snap
---
source: lib/src/complete/bash.rs
expression: "complete_bash(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"bash\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec:\n    Some(SPEC_KITCHEN_SINK.clone()), usage_cmd: None, source_file: None,\n})"
---
# @generated by usage-cli from usage spec
# Requires bash-completion (https://github.com/scop/bash-completion), which must be
# sourced before this script.
_mycli() {
    if ! type -P usage &> /dev/null; then
        echo >&2
        echo "Error: usage CLI not found. This is required for completions to work in mycli." >&2
        echo "See https://usage.jdx.dev for more information." >&2
        return 1
    fi
    if ! declare -F _init_completion > /dev/null 2>&1; then
        echo >&2
        echo "Error: bash-completion is required for mycli completions but was not loaded." >&2
        echo "Install it from your package manager and source it before this script." >&2
        return 1
    fi

	local cur prev words cword comp_args
    _init_completion -n : -- "$@" || return
    local spec_dir="${XDG_CACHE_HOME:-$HOME/.cache}/usage"
    [[ -d "$spec_dir" ]] || mkdir -p -m 700 "$spec_dir"
    local spec_file="$spec_dir/usage__usage_spec_mycli.spec"
    cat >| "$spec_file" <<'__USAGE_EOF__'
name mycli
bin mycli
source_code_link_template "https://github.com/jdx/mise/blob/main/src/cli/{{path}}.rs"
flag --flag1 help="flag1 description"
flag --flag2 help="flag2 description" {
    long_help #"""
flag2 long description

includes a code block:

    $ echo hello world
    hello world

    more code

Examples:

    # run with no arguments to use the interactive selector
    $ mise use

    # set the current version of node to 20.x in mise.toml of current directory
    # will write the fuzzy version (e.g.: 20)

some docs

    $ echo hello world
    hello world
"""#
}
flag --flag3 help="flag3 description" negate=--no-flag3
flag --with-default default="default value"
flag --shell {
    arg <shell> {
        choices bash zsh fish
    }
}
arg <arg1> help="arg1 description"
arg "[arg2]" help="arg2 description" required=#false default="default value" {
    choices choice1 choice2 choice3
}
arg <arg3> help="arg3 description" help_long="arg3 long description"
arg <argrest>… var=#true
arg "[with-default]" required=#false default="default value"
complete plugin run=#"""
echo "plugin-1
plugin-2
plugin-3"
"""#
cmd plugin {
    cmd install {
        long_help "install a plugin"
        flag "-g --global" global=#true
        flag "-d --dir" {
            arg <dir>
        }
        flag "-f --force" negate=--no-force
        arg <plugin>
        arg <version>
    }
}
__USAGE_EOF__
    # stderr is discarded: a line that doesn't parse (`mycli help <Tab>`) makes
    # complete-word fail, and its error would be printed over the prompt.
    # shellcheck disable=SC2207
	COMPREPLY=($(compgen -W "$(command usage complete-word --shell bash -f "$spec_file" --cword="$cword" -- "${words[@]}" 2>/dev/null)" -- "$cur"))
	__ltrim_colon_completions "$cur"
    # shellcheck disable=SC2181
    if [[ $? -ne 0 ]]; then
        unset COMPREPLY
    fi
    return 0
}

if [[ "${BASH_VERSINFO[0]}" -eq 4 && "${BASH_VERSINFO[1]}" -ge 4 || "${BASH_VERSINFO[0]}" -gt 4 ]]; then
    shopt -u hostcomplete && complete -o nospace -o bashdefault -o nosort -F _mycli mycli
else
    shopt -u hostcomplete && complete -o nospace -o bashdefault -F _mycli mycli
fi
# vim: noet ci pi sts=0 sw=4 ts=4 ft=sh
