lib/src/complete/snapshots/usage__complete__bash__tests__complete_bash.snap
---
source: lib/src/complete/bash.rs
expression: "complete_bash(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"bash\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec: None, usage_cmd:\n    Some(\"mycli complete --usage\".to_string()), source_file: None,\n})"
---
# @generated by usage-cli from usage spec
# Requires bash-completion (https://github.com/scop/bash-completion), which must be
# sourced before this script.
_mycli() {
    if ! type -P usage &> /dev/null; then
        echo >&2
        echo "Error: usage CLI not found. This is required for completions to work in mycli." >&2
        echo "See https://usage.jdx.dev for more information." >&2
        return 1
    fi
    if ! declare -F _init_completion > /dev/null 2>&1; then
        echo >&2
        echo "Error: bash-completion is required for mycli completions but was not loaded." >&2
        echo "Install it from your package manager and source it before this script." >&2
        return 1
    fi

	local cur prev words cword comp_args
    # `=` and `:` stay inside the word so complete-word sees `--out=a` as one word
    # rather than `--out`, `=`, `a`.
    _init_completion -n := -- "$@" || return
    local spec_dir="${XDG_CACHE_HOME:-$HOME/.cache}/usage"
    [[ -d "$spec_dir" ]] || mkdir -p -m 700 "$spec_dir"
    local spec_file="$spec_dir/usage__usage_spec_mycli.spec"
    mycli complete --usage >| "$spec_file"
    # stderr is discarded: a line that doesn't parse (`mycli help <Tab>`) makes
    # complete-word fail, and its error would be printed over the prompt.
    # Complete the text before the cursor, as `$cur` holds it: with the cursor in `--out=a|X`
    # the value typed so far is `a`, not `aX`.
    words[cword]="$cur"
    # shellcheck disable=SC2207
	COMPREPLY=($(compgen -W "$(command usage complete-word --shell bash -f "$spec_file" --cword="$cword" -- "${words[@]}" 2>/dev/null)" -- "$cur"))
	# Readline only replaces the text after the last word break, so strip the part of
	# `$cur` up to its last `:` or `=` from each candidate (what __ltrim_colon_completions
	# does for `:` alone).
	local breaks="${COMP_WORDBREAKS//[^:=]/}"
	# An empty COMPREPLY is left alone: before bash 4.4 the rewrite below would turn it into
	# one empty candidate.
	if ((${#COMPREPLY[@]})) && [[ -n "$breaks" && "$cur" == *["$breaks"]* ]]; then
		local break_prefix="${cur%"${cur##*["$breaks"]}"}"
		COMPREPLY=("${COMPREPLY[@]#"$break_prefix"}")
	fi
    # shellcheck disable=SC2181
    if [[ $? -ne 0 ]]; then
        unset COMPREPLY
    fi
    return 0
}

if [[ "${BASH_VERSINFO[0]}" -eq 4 && "${BASH_VERSINFO[1]}" -ge 4 || "${BASH_VERSINFO[0]}" -gt 4 ]]; then
    shopt -u hostcomplete && complete -o nospace -o bashdefault -o nosort -F _mycli mycli
else
    shopt -u hostcomplete && complete -o nospace -o bashdefault -F _mycli mycli
fi
# vim: noet ci pi sts=0 sw=4 ts=4 ft=sh
