lib/src/complete/snapshots/usage__complete__bash__tests__complete_bash_init.snap
---
source: lib/src/complete/bash.rs
expression: "complete_bash_init(\"usage\")"
---
# @generated by usage-cli — auto-completion for usage shebang scripts
# Source this file from your bashrc to enable <Tab> completion for any command
# on $PATH whose first line is a `usage` shebang.
#
# Sourcing order: this script registers a `complete -D` default handler. Bash
# only allows one such handler — whichever script registers last wins. Source
# this AFTER bash-completion (e.g. `/etc/bash_completion` or
# `/usr/share/bash-completion/bash_completion`) so that bash-completion's own
# default handler is captured below and chained to for non-usage commands.

# Capture any pre-existing `complete -D` handler so we can chain to it for
# commands that aren't usage shebang scripts (e.g. bash-completion's loader).
# `complete -p -D` exits non-zero if no -D handler is set; tolerate that under
# `set -e`.
_usage_chained_default_complete=""
{
    _usage_existing_d="$(complete -p -D 2>/dev/null || true)"
    if [[ "$_usage_existing_d" =~ -F[[:space:]]+([^[:space:]]+) ]]; then
        _usage_chained_default_complete="${BASH_REMATCH[1]}"
    fi
    unset _usage_existing_d
}

_usage_default_complete() {
    local cmd="${COMP_WORDS[0]}"
    local cmdpath
    if [[ "$cmd" == */* ]]; then
        cmdpath="$cmd"
    else
        cmdpath="$(type -P "$cmd" 2>/dev/null)"
    fi

    if [[ -n "$cmdpath" && -f "$cmdpath" ]]; then
        local first
        if IFS= read -r first < "$cmdpath" 2>/dev/null && [[ "$first" == "#!"*"usage"* ]]; then
            if type -P usage &> /dev/null; then
                # Bash splits `--out=a` into `--out`, `=`, `a` (`=` is in COMP_WORDBREAKS).
                # Join those back into one word, using COMP_LINE to tell `--out=a` apart
                # from `--out = a`, so complete-word sees the word that was typed. The whole
                # line is walked, not just up to the cursor, so words after it stay apart;
                # `ends` records where each joined word stops so the current one can then be
                # cut at the cursor.
                local words=() ends=() cword=0 i line="$COMP_LINE" word spaced
                for ((i = 0; i < ${#COMP_WORDS[@]}; i++)); do
                    word="${COMP_WORDS[i]}"
                    spaced=1
                    [[ "$line" == [[:space:]]* ]] || spaced=0
                    line="${line#"${line%%[![:space:]]*}"}"
                    line="${line#"$word"}"
                    if ((i > 0 && !spaced)) && [[ -n "$word" ]] \
                        && [[ "$word" == =* || "${words[${#words[@]} - 1]}" == *= ]]; then
                        words[${#words[@]} - 1]+="$word"
                    else
                        words+=("$word")
                    fi
                    ends[${#words[@]} - 1]=$((${#COMP_LINE} - ${#line}))
                    ((i == COMP_CWORD)) && cword=$((${#words[@]} - 1))
                done
                # With the cursor in `--out=a|X`, the value typed so far is `a`, not `aX`.
                local after=$((${ends[cword]:-0} - COMP_POINT))
                if ((after > 0 && after <= ${#words[cword]})); then
                    words[cword]="${words[cword]:0:${#words[cword]} - after}"
                fi
                local cur="${words[cword]}"
                local IFS=$'\n'
                # stderr is discarded so a parse error isn't printed over the prompt.
                # shellcheck disable=SC2207
                COMPREPLY=( $(command usage complete-word --shell bash -f "$cmdpath" --cword="$cword" -- "${words[@]}" 2>/dev/null) )
                # Readline only replaces the text after the last `=`, so drop what precedes it.
                # Guarded on a non-empty COMPREPLY: before bash 4.4, rewriting an empty array
                # this way leaves one empty candidate, which would erase the typed value.
                if ((${#COMPREPLY[@]})) && [[ "$cur" == *=* && "$COMP_WORDBREAKS" == *=* ]]; then
                    COMPREPLY=( "${COMPREPLY[@]#"${cur%"${cur##*=}"}"}" )
                fi
                return 0
            fi
        fi
    fi

    # Chain to whatever default handler was registered before us, if any.
    if [[ -n "$_usage_chained_default_complete" ]] \
        && [[ "$_usage_chained_default_complete" != "_usage_default_complete" ]] \
        && declare -F "$_usage_chained_default_complete" >/dev/null 2>&1; then
        "$_usage_chained_default_complete" "$@"
        return $?
    fi
    if declare -F _completion_loader >/dev/null 2>&1; then
        _completion_loader "$@"
        return $?
    fi
    return 1
}

complete -D -F _usage_default_complete -o bashdefault -o default
# vim: noet ci pi sts=0 sw=4 ts=4 ft=sh
